# Alien-Config-Creator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
alien_creator/: __init__.py  bot.py  config.py  keyboards.py  main.py  marzban.py  naming.py  storage.py
deploy/: alien-config-creator-update.service  alien-config-creator-update.timer  alien-config-creator.service  update.sh
tests/: test_marzban.py  test_naming.py
