[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "alien-config-creator"
version = "1.0.0"
description = "Private Telegram bot for bulk Marzban user creation"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "python-dotenv==1.1.1",
    "python-telegram-bot==22.7",
]

[project.scripts]
alien-config-creator = "alien_creator.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["alien_creator*"]

